Fixed overflowing mobile menu

--- a/scss/components/_menu.scss
+++ b/scss/components/_menu.scss
@@ -5,7 +5,7 @@
    top: 0;
    left: 0;
    padding: 20px;
-   width: 100vw;
+   width: 100%;
    height: 100vh;
    background: rgba($dark-blue, 0.95);
    z-index: 10;
